chore: add v2 documents endpoint
